# emi-calculator-test-automation-suite

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
src/config/: settings.py
src/pages/: emi_calculator_page.py
src/pages/components/: amortization_table.py  breakup_chart.py  loan_slider.py  results_panel.py
src/utils/: emi_formula.py  excel_validator.py  highcharts_reader.py  inr_format.py  logging_setup.py  test_data.py
test-data/: boundary_inputs.json  emi_calculation_inputs.json
tests/chart_table_consistency/: test_chart_table_consistency.py
tests/emi_calculation/: test_emi_against_formula.py
tests/excel_file_checks/: test_excel.py
tests/slider_values/: test_boundaries.py
