[project]
name = "emi-calculator-tests"
version = "0.1.0"
description = "QA automation suite for the Home Loan EMI Calculator at emicalculator.net"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.49.0",
    "pytest>=8.3.0",
    "pytest-playwright>=0.6.2",
    "pytest-xdist>=3.6.1",
    "pytest-html>=4.1.1",
    "pytest-rerunfailures>=14.0",
    "allure-pytest>=2.13.5",
    "python-dotenv>=1.0.1",
    "openpyxl>=3.1.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
